feat: add meta info

--- a/index.html
+++ b/index.html
@@ -4,19 +4,18 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="og:site_name" content="수연과 성두의 결혼식에 초대합니다" />
-	<link rel="canonical" href="https://soosungyeondoo.wedding.com" />
-	<meta name="twitter:url" content="https://soosungyeondoo.wedding.com" />
-	<meta name="og:url" content="https://soosungyeondoo.wedding.com" />
-	<title>Welcome to WeddingInvitation! | 수연과 성두의 결혼식에 초대합니다</title>
-	<meta name="twitter:title" content="Welcome to WeddingInvitation! | 수연과 성두의 결혼식에 초대합니다" />
-	<meta name="og:title" content="Welcome to WeddingInvitation! | 수연과 성두의 결혼식에 초대합니다" />
-	<meta name="description" content="A description of WeddingInvitation" />
-	<meta name="twitter:description" content="A description of WeddingInvitation" />
-	<meta name="og:description" content="A description of WeddingInvitation" />
-	<meta name="twitter:card" content="summary" />
+	<link rel="canonical" href="http://sooyeonsungdoo.github.io/" />
+	<meta name="twitter:url" content="http://sooyeonsungdoo.github.io/" />
+	<meta name="og:url" content="http://sooyeonsungdoo.github.io/" />
+	<title>수연과 성두의 결혼식에 초대합니다</title>
+	<meta name="twitter:title" content="수연과 성두의 결혼식에 초대합니다" />
+	<meta name="og:title" content="수연과 성두의 결혼식에 초대합니다" />
+	<meta name="description" content="함께할 때에 비로소 깨닫는 사랑임을 영원히 기억하며 살겠습니다." />
+	<meta name="twitter:description" content="함께할 때에 비로소 깨닫는 사랑임을 영원히 기억하며 살겠습니다." />
+	<meta name="og:description" content="함께할 때에 비로소 깨닫는 사랑임을 영원히 기억하며 살겠습니다." />
+	<meta name="twitter:card" content="2020년 10월 10일 오후 3시 30분 서울 천주교 도림동 성당" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="shortcut icon" href="/images/favicon.png" type="image/png" />
-	<link rel="alternate" href="/feed.rss" type="application/rss+xml" title="Subscribe to 수연과 성두의 결혼식에 초대합니다" />
 	<link rel="stylesheet" href="/style.css" type="text/css" />
 	<style>
 		* {
