--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 		2번 출구로 나오시면 안내 봉사자가 있습니다.
 	</p>
 
-	<a href = "https://www.icloud.com/sharedalbum/ko-kr/#B0AGWZuqD77Kcg">
+	<a href="https://www.icloud.com/sharedalbum/ko-kr/#B0AGWZuqD77Kcg" target="_blank">
 		<div class="grid-container">
 			<img class="grid-item" src="img/thumbnail1.png">
 			<img class="grid-item" src="img/thumbnail2.png">
