--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="og:site_name" content="👩🏻‍💻수연과 👨🏻‍💻성두의 결혼식에 초대합니다" />
-	<link rel="canonical" href="http://sooyeonsungdoo.github.io/" />
-	<meta name="twitter:url" content="http://sooyeonsungdoo.github.io/" />
-	<meta name="og:url" content="http://sooyeonsungdoo.github.io/" />
+	<link rel="canonical" href="http://sooyeunsungdoo.github.io/" />
+	<meta name="twitter:url" content="http://sooyeunsungdoo.github.io/" />
+	<meta name="og:url" content="http://sooyeunsungdoo.github.io/" />
 	<title>👩🏻‍💻수연과 👨🏻‍💻성두의 결혼식에 초대합니다</title>
 	<meta name="twitter:title" content="👩🏻‍💻수연과 👨🏻‍💻성두의 결혼식에 초대합니다" />
 	<meta name="og:title" content="👩🏻‍💻수연과 👨🏻‍💻성두의 결혼식에 초대합니다" />
