chore: add prefix

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 		화환 및 일반 쌀 화환 모두 정중히 사양합니다. <br>
 		축하 화환 대신에 아래 연락처로 '축복미'를 보내주시면 어려운 이웃에게 전달하겠습니다. <br>
 		<br>
-		까리따스분과 이연희 베네란다 (<a href="tel:010-5380-4747">010-5380-4757</a>)<br>
+		문의: 까리따스분과 이연희 베네란다 (<a href="tel:010-5380-4747">010-5380-4757</a>)<br>
 		<br>
 	</footer>
 	<br>
