feat: add call and sms

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
 			word-break: keep-all;
 		}
 
+		a {
+			text-decoration: none;
+		}
+
 		h1,
 		h2 {
 			margin: 2rem;
@@ -149,6 +153,13 @@
 			<img class="grid-item" src="img/thumbnail6.png">
 	  </div>
 	</a>
+
+	<h2> 신부신랑에게 연락하기 </h2>
+
+	<p>
+		👰 신부에게 연락하기: <a href="tel:010-8716-6180">📞 </a>   <a href="sms:010-8716-6180"> ✉️</a><br>
+		🤵 신랑에게 연락하기: <a href="tel:010-7120-8348">📞 </a>   <a href="sms:010-7120-8348"> ✉️ </a> 
+	</p>
 	<br>
 	<footer>
 		화환 및 일반 쌀 화환 모두 정중히 사양합니다. <br>
